feat: shift handler oas + handler
